...
    return AppBar(
      automaticallyImplyLeading: false,
      centerTitle: true,
      title: const AppLogo(),
      actions: [
        PopupMenuButton<_MenuItem>(
          key: const ValueKey('menu'),
          onSelected: (item) => _onMenuItemSelected(context, item),
          itemBuilder: (context) => [
            if (shoppingListsMode == ShoppingListsMode.multiple) ...[
              _PopupMenuItem(
                value: _MenuItem.archiveList,
                enabled: onArchiveList != null,
...
                icon: const Icon(Icons.delete),
                label: Text(S.of(context)!.menu_remove_all_done),
              ),
            ],
            const PopupMenuDivider(),
            _PopupMenuItem(
              key: const ValueKey('settings'),
              value: _MenuItem.settings,
              icon: const Icon(Icons.settings),
              label: Text(S.of(context)!.settings_title),
            ),
          ],
        ),
...
