...
  @override
  Widget build(BuildContext context) {
    final appSettings = context.watch<AppSettingsCubit>().state;

    return Scaffold(
      appBar: AppBar(
        leading: const BackButton(key: ValueKey('settings-back')),
        title: Text(S.of(context)!.settings_title),
      ),
      body: ListView(
        padding: const EdgeInsets.symmetric(vertical: 8),
        children: [
          RadioListTile<ShoppingListsMode>(
...
            title: Text(S.of(context)!.settings_single_list),
            subtitle: Text(S.of(context)!.settings_single_list_subtitle),
            onChanged: (mode) => _setShoppingListsMode(context, mode!),
          ),
          const Divider(),
          ListTile(
            key: const ValueKey('dark-theme'),
            leading: const Icon(Icons.nights_stay),
            title: Text(S.of(context)!.settings_dark_theme),
            subtitle: Text(appSettings.darkTheme.localize(context)),
            onTap: () => _onDarkThemeTap(context),
          ),
          SwitchListTile(
...
